# koto.dev

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  Trunk.toml  config.toml  index.html  justfile
content/: _index.md
tools/convert-koto-docs/: Cargo.toml
tools/convert-koto-docs/src/: main.rs
website/: .gitignore  Cargo.toml  README.md  config.toml  deployed.txt  justfile  package.json  vite.config.js
website/content/: _index.md
website/content/docs/: _index.md  info.toml
website/content/docs/0.13/: _index.md
website/content/docs/0.14/: _index.md
website/content/docs/0.15/: _index.md
website/content/docs/0.16/: _index.md
website/content/docs/api/: _index.md
website/content/docs/language/: _index.md
website/content/docs/next/: _index.md
website/content/docs/v0.11/: _index.md
website/content/docs/v0.12/: _index.md
website/content/news/: 2024-04-18_koto-0.14.md  2024-04-19_bevy_koto-0.1.md  2025-01-07_koto-0.15.md  2025-01-08_koto-0.15.md  2025-01-08_koto-ls.md  2025-07-23_koto-0.16.md  _index.md
website/js/: main.js  search.js
website/playground/: Cargo.toml  README.md  TODO.md  Trunk.toml  index.html  justfile  post-process.koto
website/playground/examples/canvas/: alignment.koto  boids.koto  lines.koto  random_rects.koto
website/playground/examples/cookbook/: enum.koto  set.koto
website/playground/examples/intro/: fibonacci.koto  fizz_buzz.koto  hello_world.koto  hello_world.rs
website/playground/examples/play/: fizz_buzz.koto
website/playground/gist-worker/: index.js  package.json  wrangler.toml
website/playground/src/: ace_bindings.rs  index.sass  index.scss  koto-highlight-rules.js  koto_wrapper.rs  main.rs  show_notification.js  stored_value.rs
website/playground/src/components/: editor.rs  editor_toolbar.rs  examples.rs  mod.rs  playground.rs  script_menu.rs  share.rs  toolbar_button.rs
website/playground/tests/: run_examples.rs
website/public/: 404.html  atom.xml  code-dark.css  code-light.css  color-scheme.js  docs.css  index.html  main.css  robots.txt  search-index-0.15.json  search-index-0.16.json  search-index-next.json  sitemap.xml  uikit.css
website/public/about/: index.html
website/public/bundle/: colorScheme-BEIaVpeV.js  main-B2bLpwqn.js  main-Bd9VgZZn.css  main-BziFg2rg.js  main-Cfro2pVk.js  main-Cr1cgR8E.css
website/public/bundle/.vite/: manifest.json
website/public/docs/: index.html  info.toml
website/public/docs/0.13/: index.html
website/public/docs/0.14/: index.html
website/public/docs/0.15/: index.html
website/public/docs/0.16/: index.html
website/public/docs/next/: index.html
website/public/news/: atom.xml  index.html
website/public/play/: index-591b7f5556671f0e.css  index-71d46e96ec36f97b.css  index-764577d3ec20bf8c.css  index-effabcd73da7bbd6.css  index.html  playground-10767dd2786ebce1.js  playground-10767dd2786ebce1_bg.wasm  playground-1c0539a6e29cd53b.js  playground-1c0539a6e29cd53b_bg.wasm  playground-20bc6d7eef1aa0a6.js  playground-20bc6d7eef1aa0a6_bg.wasm  playground-3229670b3f146c1a.js  playground-3229670b3f146c1a_bg.wasm  playground-39da5878f9b5b0ea.js  playground-39da5878f9b5b0ea_bg.wasm  playground-3a50a9eeeb1cc47a.js  playground-3a50a9eeeb1cc47a_bg.wasm  playground-452f657cc347f064.js  playground-452f657cc347f064_bg.wasm  playground-461992592e5af637.js  playground-461992592e5af637_bg.wasm  playground-5e2774314f5c01db_bg.wasm  playground-625f962566e63978.js  playground-625f962566e63978_bg.wasm  playground-62d91079ae78f692.js  playground-62d91079ae78f692_bg.wasm  playground-643887865bc57f29.js  playground-643887865bc57f29_bg.wasm  playground-6aaf1b3c08a4aaf5.js  playground-6aaf1b3c08a4aaf5_bg.wasm  playground-6f61d45f8a9ac514.js  playground-6f61d45f8a9ac514_bg.wasm  playground-74f9d414033d88c7.js  playground-74f9d414033d88c7_bg.wasm  playground-768a561423febe1b.js  playground-768a561423febe1b_bg.wasm  playground-800861de08f618c2.js  playground-800861de08f618c2_bg.wasm  playground-80dc30f3fd82d91d.js  playground-80dc30f3fd82d91d_bg.wasm  (+32 more)
website/public/play-0.13/: index-79dbfc6184c2c022.css  index.html  playground-5eb1edd8e0c2392c.js  playground-5eb1edd8e0c2392c_bg.wasm  uikit-d77b0cce77f1e987.css
website/public/play-0.14/: index.html  playground-12d1c16c1bafeb7.js  uikit-c984dbe4f67f665f.css
website/public/play-0.15/: playground-1cc6b182423bd1a5.js  playground-1cc6b182423bd1a5_bg.wasm  uikit-f2c73ada5ad5d2fc.css
website/public/play-0.16/: color-scheme.js  index-efd347d13ac0c5e5.css  index.html  playground-fe51ea5f4f82490a.js  playground-fe51ea5f4f82490a_bg.wasm  uikit-ec44214c827e44f3.css
website/sass/: code-dark.scss  code-light.scss  docs.sass  main.sass  main.scss  uikit.sass  uikit.scss  variables.sass  variables.scss
website/static/: .gitignore  color-scheme.js  search-index-0.15.json  search.js  uikit-icons.min.js  uikit.min.js
website/static/play-0.13/: index.html
website/static/play-0.14/: index-37f42b0f2870f30.css  playground-12d1c16c1bafeb7_bg.wasm
website/static/play-0.15/: index-8f3143d5d278d5e8.css  index.html
website/syntaxes/: koto-sublime
website/syntaxes/koto-type/: kototype.sublime-syntax
website/templates/: 404.html  about-nav.html  about.html  anchor-link.html  base.html  components.html  data.toml  docs-base.html  docs-core-lib-nav.html  docs-core-lib.html  docs-guide-nav.html  docs-guide.html  docs-lang-guide-nav.html  docs-lang-guide.html  docs-nav-contents.html  docs-section-nav.html  docs-section.html  docs-version.html  docs.html  guide-intro.md  header.html  index.html  mobile-nav-start.html  mobile-nav.html  section.html  single-page.html  version-selector.html
website/templates/news/: article_meta.html  page-nav.html  page.html  section.html
website/templates/shortcodes/: changelog.html  example_playground_link.html  youtube.html
website/tools/convert-koto-docs/: Cargo.toml
website/tools/postprocess-playground/: Cargo.toml
website/xtask/: Cargo.toml
website/xtask/src/: build_search_index.rs  convert_docs.rs  data.rs  docs_info.rs  main.rs  postprocess_playground.rs  version_snapshot.rs
(+334 files in other folders)
