[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
gloo-utils = "0.1.2"    # Convenience crate for common `web_sys` features
js-sys = "0.3.56"
koto = { git = "https://github.com/koto-lang/koto" }
wasm-bindgen = "0.2.79"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Text',
  'Window',
]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
