[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
gloo-events = "0.1.1"   # Convenience crate for working with DOM event listeners
gloo-render = "0.1.0"   # Convenience crate for working with browser's requestAnimationFrame
gloo-utils = "0.1.2"    # Convenience crate for common `web_sys` features
instant = "0.1.12"      # A partial replacement for std::time::Instant that works on WASM too.
js-sys = "0.3.56"
koto = { git = "https://github.com/koto-lang/koto" }
koto_random = { git = "https://github.com/koto-lang/koto" }
wasm-bindgen = "0.2.79"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlOptionElement',
  'HtmlOptGroupElement',
  'HtmlSelectElement',
  'Node',
  'Storage',
  'Text',
  'Window',
]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[patch."https://github.com/koto-lang/koto"]
koto = { path = "../koto/src/koto" }
koto_random = { path = "../koto/libs/random" }
