[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koto = { git = "https://github.com/koto-lang/koto" }
koto_random = { git = "https://github.com/koto-lang/koto" }

console_error_panic_hook = "0.1" # A panic hook for `wasm32-unknown-unknown` that logs panics to `console.error`
fb_cloned = "0.1.2"              # Provides a clone macro
gloo-console = "0.2.1"           # Convenience crate for working with browser's console
gloo-events = "0.1.1"            # Convenience crate for working with DOM event listeners
gloo-render = "0.1.0"            # Convenience crate for working with browser's requestAnimationFrame
gloo-utils = "0.1.2"             # Convenience crate for common `web_sys` features
instant = "0.1.12"               # A partial replacement for std::time::Instant that works on WASM too.
js-sys = "0.3.56"                # Bindings for all JS global objects and functions in all JS environments like Node.js and bro…
wasm-bindgen = "0.2.79"          # Easy support for interacting between JS and Rust.
wee_alloc = "0.4.5"              # wee_alloc: The Wasm-Enabled, Elfin Allocator
yew = "0.19.3"                   # A framework for making client-side single-page apps

[dependencies.web-sys]
version = "0.3.56"
features = [
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlOptionElement',
  'HtmlOptGroupElement',
  'HtmlSelectElement',
  'Node',
  'Storage',
  'Text',
  'Window',
]

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[patch."https://github.com/koto-lang/koto"]
koto = { path = "../koto/src/koto" }
koto_random = { path = "../koto/libs/random" }

[dev-dependencies]
glob = "0.3.0"
