[workspace]
members = ["playground", "xtask"]
resolver = "2"

[workspace.dependencies]
# A panic hook for `wasm32-unknown-unknown` that logs panics to `console.error`
console_error_panic_hook = "0.1"
# Provides a clone macro
fb_cloned = "0.1.2"
# A small cross-platform library for retrieving random data from system source
getrandom = "0.2.4"
# Support for matching file paths against Unix shell style patterns.
glob = "0.3.0"
# Convenience crate for working with browser's console
gloo-console = "0.2.1"
# Convenience crate for working with DOM event listeners
gloo-events = "0.1.1"
# HTTP requests library for WASM Apps
gloo-net = { version = "0.1.0", default-features = false }
# Convenience crate for working with JavaScript timers
gloo-timers = "0.2.3"
# Convenience crate for common `web_sys` features
gloo-utils = "0.1.2"
# A partial replacement for std::time::Instant that works on WASM too.
instant = "0.1.12"
# Bindings for all JS global objects and functions in all JS environments like Node.js and bro…
js-sys = "0.3.56"
# A lightweight logging facade for Rust
log = "0.4.20"
# Markdown parsing
pulldown-cmark = "0.9.1"
# Convert pulldown-cmark Events back to the string they were parsed from
pulldown-cmark-to-cmark = "10.0.1"
# Random number generators and other randomness functionality.
rand = "0.8.5"
# A generic serialization/deserialization framework
serde = "1.0.136"
# Easy support for interacting between JS and Rust.
wasm-bindgen = "0.2.79"
# A logger for the browser console
wasm-logger = "0.2.0"
# Bindings for all Web APIs, a procedurally generated crate from WebIDL
web-sys = "0.3.56"
# A framework for making client-side single-page apps
yew = "0.19.3"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
