[workspace]
members = ["playground", "xtask"]
resolver = "2"

[workspace.dependencies]
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.79"
# A panic hook for `wasm32-unknown-unknown` that logs panics to `console.error`
console_error_panic_hook = "0.1"
# Provides a clone macro
fb_cloned = "0.1.2"
# Expanding std::fs and std::io
fs_extra = "1.3.0"
# Support for matching file paths against Unix shell style patterns.
glob = "0.3.0"
# Convenience crate for working with browser's console
gloo-console = "0.2.1"
# Convenience crate for working with DOM event listeners
gloo-events = "0.1.1"
# HTTP requests library for WASM Apps
gloo-net = { version = "0.1.0", default-features = false }
# Convenience crate for working with JavaScript timers
gloo-timers = "0.2.3"
# Convenience crate for common `web_sys` features
gloo-utils = "0.1.2"
# A partial replacement for std::time::Instant that works on WASM too.
instant = "0.1.12"
# Bindings for all JS global objects and functions in all JS environments like Node.js and bro…
js-sys = "0.3.56"
# A lightweight logging facade for Rust
log = "0.4.20"
# Markdown parsing
pulldown-cmark = "0.13"
# Convert pulldown-cmark Events back to the string they were parsed from
pulldown-cmark-to-cmark = "21"
# A generic serialization/deserialization framework
serde = { version = "1.0.136", features = ["derive"] }
# A JSON serialization file format
serde_json = "1.0.135"
# Template engine based on Jinja2/Django templates
tera = "1.20.0"                  
# A native Rust encoder and decoder of TOML-formatted files and streams.
toml = "0.8.12"
# Recursively walk a directory.
walkdir = "2.5.0"
# Easy support for interacting between JS and Rust.
wasm-bindgen = "0.2.92"
# A logger for the browser console
wasm-logger = "0.2.0"
# Bindings for all Web APIs, a procedurally generated crate from WebIDL
web-sys = "0.3.56"
# A framework for making client-side single-page apps
yew = "0.19.3"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
