[package]
name = "convert-koto-docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark-to-cmark = "10.0.1"    # Convert pulldown-cmark Events back to the string they were parsed from
urlencoding = "2.1.0"                 # A Rust library for doing URL percentage encoding.

[dependencies.pulldown-cmark]
# Markdown parsing
version = "0.9.1"
default-features = false
