[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
koto = { path = "../../modules/koto/core/koto" }

console_error_panic_hook = { workspace = true }
fb_cloned = { workspace = true }
gloo-console = { workspace = true }
gloo-events = { workspace = true }
gloo-timers = { workspace = true }
gloo-utils = { workspace = true }
instant = { workspace = true }
js-sys = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true }

[dependencies.gloo-net]
workspace = true
features = ["http", "json"]

[dependencies.web-sys]
workspace = true
features = [
  'Element',
  'Location',
  'MutationObserver',
  'MutationObserverInit',
  'Performance',
  'Storage',
  'UrlSearchParams',
  'Window',
]

[dev-dependencies]
glob = { workspace = true }
