[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = { workspace = true }
fb_cloned = { workspace = true }
gloo-console = { workspace = true }
gloo-events = { workspace = true }
gloo-timers = { workspace = true }
gloo-utils = { workspace = true }
instant = { workspace = true }
js-sys = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true }

[dependencies.koto]
path = "../../modules/koto/crates/koto"
default-features = false
features = ["rc"]

[dependencies.gloo-net]
workspace = true
features = ["http", "json"]

[dependencies.web-sys]
workspace = true
features = [
  'Element',
  'Location',
  'MutationObserver',
  'MutationObserverInit',
  'Performance',
  'Storage',
  'UrlSearchParams',
  'Window',
]

[dev-dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
