[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
fs_extra = { workspace = true }
pulldown-cmark = { workspace = true }
pulldown-cmark-to-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
